<resources>
    <string name="app_name">SCalc</string>
    <string name="cos">COS</string>
    <string name="acos">ACOS</string>
    <string name="mul">*</string>
    <string name="tan">TAN</string>
    <string name="div">/</string>
    <string name="atan">ATAN</string>
    <string name="pie">PIE</string>
    <string name="e">E</string>
    <string name="inverse">INVERSE</string>
    <string name="pow">POW</string>
    <string name="log">LOG</string>
    <string name="exp">EXP</string>
    <string name="mod">%</string>
    <string name="fact">!</string>
    <string name="ncr">nCr</string>
    <string name="npr">nPr</string>
    <string name="square">SQUARE</string>
    <string name="s_root">S ROOT</string>
    <string name="cube">CUBE</string>
    <string name="c_root">C ROOT</string>
    <string name="x">x</string>
    <string name="y">Y</string>
    <string name="ans">ANS</string>
    <string name="equalto">=</string>
    <string name="sin">SIN</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="asin">ASIN</string>
    <string name="start">First Operand</string>
    <string name="result">Result</string>
    <string name="pow_a_b">POW(a,b)</string>
    <string name="second_operand">Second Operand</string>
    <string name="nth_root">NTH ROOT</string>
</resources>
